# text-buffer

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic_usage.rs  performance_demo.rs
src/: buffer.rs  lib.rs  piece.rs  red_black_tree.rs  text_buffer.rs  types.rs
